# wasmcon-pi

./: .gitignore
RaspberryPi/python3/: main.py  nats-demo.py
waveshare-oled/: Cargo.toml  flake.nix  result  rust-toolchain.toml
waveshare-oled/waveshareoled-actor/: Cargo.toml  wasmcloud.toml
waveshare-oled/waveshareoled-actor/src/: lib.rs
waveshare-oled/waveshareoled-interface/: Makefile  codegen.toml  waveshareoled.smithy
waveshare-oled/waveshareoled-interface/rust/: Cargo.toml
waveshare-oled/waveshareoled-interface/rust/src/: lib.rs  waveshareoled.rs
waveshare-oled/waveshareoled-provider/: Cargo.toml  Makefile
waveshare-oled/waveshareoled-provider/src/: main.rs
waveshare-oled/waveshareoled-provider/src/phony/: display.py  mod.rs
