[package]
name = "waveshareoled-actor"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "waveshareoled_actor"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde_bytes = "0.11"
serde_json ="1.0"
serde = {version = "1.0", features = ["derive"]}

wasmbus-rpc = "0.14"
wasmcloud-interface-httpserver = "0.11"
waveshareoled-interface = {version = "0.1", path = "/Users/connor/Documents/scratch/pi/waveshare-oled/waveshareoled-interface/rust"}

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
