[package]
name = "waveshareoled-actor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "waveshareoled_actor"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
wasmbus-rpc = { workspace = true }
wasmcloud-interface-httpserver = { workspace = true }
waveshareoled-interface = { workspace = true }
