[package]
name = "waveshareoled-provider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
wasmbus-rpc = { workspace = true }
waveshareoled-interface = { workspace = true }

[[bin]]
name = "waveshareoled_provider"
path = "src/main.rs"
